# UniDedup

./: .gitignore  README.md
client/: Agent.cc  Client.cc  Makefile.am  Makefile.in  cls.sh  config.h  config.h.in  configure  configure.ac
client/autom4te.cache/: output.0  requests  traces.0  traces.1
client/config/: config.txt  echash_config.txt  ip_list.txt
client/src/: Agent.cc  Client.cc  Makefile.am
client/src/common/: Assembling.cc  Assembling.hh  Chunking.cc  Chunking.hh  Config.cc  Config.hh  Echash.cc  Echash.hh  FileRecipe.cc  FileRecipe.hh  Fingerprint.cc  Fingerprint.hh  Group.cc  Group.hh  Hashing.cc  Hashing.hh  Makefile.am  Makefile.in  Reading.cc  Reading.hh  Receiving.cc  Receiving.hh  Worker.cc  Worker.hh  ae_chunking.c  ae_chunking.cc  rabin_chunking.c  rabin_chunking.cc  redis_cluster.cc  redis_cluster.hh  stateful_routing.cc  stateful_routing.hh
client/src/inc/: include.hh
client/src/protocol/: AgentCommand.cc  AgentCommand.hh  Makefile.am  Makefile.in  destorCommand.cc  destorCommand.hh
client/src/util/: Makefile.am  Makefile.in  RedisUtil.cc  RedisUtil.hh  disk_usage.cc  disk_usage.hh  queue.cc  queue.h  queue.hh  sync_queue.cc  sync_queue.h  sync_queue.hh  time.cc  time.hh
dependency/: dist.sh  patch.sh  procedure.md  setup.sh
dependency/res/myredis/: redis-cluster.conf  redis.conf
destor/: Makefile.am  Makefile.in  configure  destor.config  rebuild  stop.sh
destor/src/: Makefile.am  Makefile.in  chunk_phase.c  config.c  dedup_phase.c  destor.c  destor.h  destor_server.c  destor_server.h  do_backup.c  do_restore.c  filter_phase.c  hash_phase.c  jcr.c  jcr.h  proxy.c  read_phase.c  rewrite_phase.c
destor/src/chunking/: Makefile.in
destor/src/fsl/: Makefile.in
destor/src/index/: Makefile.in  index.c
destor/src/recipe/: Makefile.in  recipestore.c
destor/src/storage/: Makefile.am  Makefile.in  containerstore.c  containerstore.h
destor/src/utils/: Makefile.am  Makefile.in  alloc.c  fmacros.h  redis_util.c  redis_util.h  sds.h  sdsalloc.h
libmemcached-1.0.18/: Makefile.in  aclocal.m4  configure
libmemcached-1.0.18/clients/: memflush.cc
libmemcached-1.0.18/libmemcached/: encoding.cc  ring.cc
libmemcached-1.0.18/libmemcached-1.0/struct/: ring.h
storage/: CMakeCache.txt  Makefile  autoSync.sh  bw_limit_clean.sh  bw_limit_init.sh  bw_limit_rack.sh  cmake_install.cmake  encode.sh  format.sh  limit_bandwidth.sh  log.txt  start.sh  start_ag.sh  start_all_ag.py  start_coor.sh  stop.sh  test_cl.sh  test_lrc.sh
storage/conf/: CLSetting.xml  LRCSetting.xml  addresses.txt  cl_addresses.txt  claySetting.xml  convSetting.xml  nonSysSetting.xml
storage/hdfs3-integration/conf/: core-site.xml  hdfs-site.xml  workers
storage/log/: log.txt
storage/src/: HDFSClient.cc  Makefile  OECClient.cc  cmake_install.cmake
storage/src/common/: Config.cc  Config.hh  Coordinator.cc  FSObjOutputStream.cc  Makefile  OECInputStream.cc  OECWorker.cc  OECWorker.hh  StripeStore.cc  cmake_install.cmake
storage/src/ec/: CL262059.cc  CL262059.hh  Clay.cc  Clay.hh  (+11 more)
utils/: agent_log.txt  analyse  analyse.cc  auto_sync.sh  cls.sh  destor_setup.sh  start.sh  start_agents.sh  start_destors.sh  stop.sh
utils/log/: log1.txt  log10.txt  log11.txt  log2.txt  log3.txt  log4.txt  log7.txt  log8.txt  log9.txt
utils/openssl-1.0.2d/: libcrypto.pc  libssl.pc  openssl.pc
(+49 files in other folders)
