noinst_LIBRARIES=libdestor.a libproxy.a
libdestor_a_SOURCES=destor.c jcr.c config.c do_backup.c read_phase.c chunk_phase.c hash_phase.c trace_phase.c dedup_phase.c rewrite_phase.c filter_phase.c cfl_rewrite.c cap_rewrite.c cbr_rewrite.c har_rewrite.c restore_aware.c do_restore.c optimal_restore.c assembly_restore.c cma.c do_delete.c destor_server.c
libproxy_a_SOURCES=proxy.c
LIBS=-lglib -lhiredis
